fix styling to support overflow

--- a/src/styles/main-style.scss
+++ b/src/styles/main-style.scss
@@ -1,23 +1,38 @@
 @use 'colours';
 
 body {
-    font-size: 200%;
+    font-size: 5vh;
+    height: 100vh;
+    width: 100vw;
     color: colours.$main-text-lite;
     background-color: colours.$secondary-bg-lite;
 }
 
+nav {
+    display: flex;
+    background-color: aqua;
+    min-width: 100%;
+}
+
 .bubble-container {
     display: flex;
-    flex-wrap: wrap;
+    flex-direction: column;
+    overflow-y: auto;
     width: 100%;
-    background-color: colours.$primary-bg-lite;
+    height: 80%;
+}
+
+.box-row {
+    background-color: aqua;
+    display: flex;
+    flex-direction: row;
 }
 
 // TODO: remove background-color placeholders
 
 // used for the header image and to take up space on the left
 .bubble-sidebar {
-    // background-color: yellow;
+    background-color: yellow;
     display: flex;
     flex-basis: 20%;
     align-items: center;
@@ -25,25 +40,29 @@ body {
 }
 
 .bubble-main {
-    // background-color: blue;
+    background-color: blue;
     display: flex;
     flex-wrap: wrap;
-    flex-basis: 80%;
+    flex-basis: 100%;
     header {
-        // background-color: red;
+        background-color: red;
         display: flex;
         flex-basis: 100%;
         flex-wrap: nowrap;
     }
     #content {
-        // background-color: green;
+        background-color: green;
         flex-basis: 100%;
     }
-    nav {
-        // background-color: aqua;
+    #bubble-links {
+        background-color: blueviolet; //colours.$primary-bg-lite;
         display: flex;
-        flex-basis: 300px;
         justify-content: flex-start;
-        gap: 0 5%;
+        justify-items: center;
     }
+}
+
+.icon-links {
+    width: 60px;
+    height: 60px;
 }
